# 8point_omni

./: CMakeLists.txt  README.md
include/: myUtil.h
src/: main.cpp
